# Backend-app-for-procurement

./: .pre-commit-config.yaml  README.md  docker-compose-db.yaml  docker-compose.yaml  env.example  pyproject.toml
app/: main.py  shop1.yaml
app/api/: crud.py  import_product.py  orders.py  products.py  shop.py  users.py  utils.py
app/core/: admin.py  celery_app.py  dependency.py  redis_cache.py  redis_cli.py  security.py  settings.py
app/crud/: base_crud.py  orders.py  products.py  shops.py  users.py
app/migrations/: env.py
app/migrations/versions/: 2024_10_31_1709-b3e7dc604eed_added_all_models.py  2024_10_31_1717-2b0155b72af7_fixed_enum_congig.py  2024_11_07_1441-4587dc2ce3fe_fixed_url_in_shop_field.py  2024_11_15_0110-80294b9b7763_added_nullable_field_for_users.py  2024_11_19_0341-720c84b949fb_added_relationship_for_products_with_.py  2024_11_19_1121-1180909d382a_fix_categoryproduct_parametrs.py  2024_11_19_1607-3a47bae51d87_add_unique_field.py  2024_11_19_1633-af7c7d1e31ec_add_unique_fields.py  2024_11_19_1645-07e3b7e3d524_add_unique_fields_2.py  2024_11_20_1132-345fe08a9a4e_add_lazy.py  2024_11_20_1132-f97bb3b88a00_add_lazy.py  2024_11_21_1848-29551ea88771_first_migrations.py  2024_11_27_1947-d2c41013ed49_fix_orderlist_model.py  2024_11_27_1954-ec6de30ece33_fix_shop_model.py  2024_11_28_1640-68517ea173eb_fix_order_models.py  2024_11_29_1513-6c8f39e2c543_add_constraint_for_remainder_product_2.py  2024_11_29_1723-19af8d747d8c_add_nullable_field_for_shop.py  2024_11_29_1743-a60818e1f9fb_fix_max_lenght_for_category.py  2024_11_29_1759-dcacc71a6291_fix_max_lenght_for_product.py  2024_11_29_1900-404c369a2362_fix_max_lenght_for_parametr.py  2024_11_30_1835-c787b4d5956c_fix_max_lenght_for_all_model.py  2024_12_01_2255-bd04191a7eff_add_address_for_order.py  2024_12_01_2359-bf5db595ccc8_add_address_for_order.py  2024_12_11_1429-193293fe06f9_fixed_db.py
app/models/: __init__.py  orders.py  products.py  users.py
app/schemas/: products.py  schemas.py  users.py
app/tests/: conftest.py  factory.py  utils.py
app/tests/api/: conftest.py  test_order.py  test_products.py  test_shop.py  test_users.py
app/tests/migrations/: conftest.py  test_migrations_up_to_date.py  test_stairway.py
